# image-convolve

./: .gitignore  Cargo.toml  README.md
benches/: images.rs  large.rs  many-times.rs  small-inputs.rs
images/: README.md
src/: cli.rs  error.rs  kernel.rs  lib.rs  main.rs  prelude.rs
src/convolution/: mod.rs  strategy.rs  util.rs
src/convolution/backends/: cpu_multi.rs  cpu_naive.rs  cpu_single.rs  cpu_util.rs
src/convolution/backends/cpu/: multi.rs  single.rs  util.rs
src/convolution/backends/gpu/offscreen/: boilerplate.rs  context.rs  mod.rs  shader.wgsl  texture.rs
src/convolution/backends/gpu/render/: boilerplate.rs  mod.rs  shader.wgsl  texture.rs
