[package]
name = "image-convolve"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.2.7", features = ["derive"] }

# image handling
image = "0.24.6"

# multi-threading
rayon = "1.7.0"

# error handling
thiserror = "1.0.40"

# logging/tracing
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

# GPU
wgpu = "0.16.0"
# wgpu has async operations
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "sync"] }

[dev-dependencies]
# benchmarking
criterion = { version = "0.4.0", features = ["html_reports"] }


[[bench]]
name = "images"
harness = false
